--- a/src/app/SistemCofee/updateuser/updateuser.component.html
+++ b/src/app/SistemCofee/updateuser/updateuser.component.html
@@ -1,1 +1,29 @@
-<p>updateuser works!</p>
+<section class="items-center">
+    <div class="flex flex-col items-center pt-52">
+    <div class="flex flex-col items-center">
+    <h1 class="pb-5  text-lg font-semibold text-left rtl:text-right">Actualiar Usuario</h1>
+    <form class="items-center justify-center">
+        <div class="pb-3">
+            <label class="pr-3  text-lg font-semibold text-left rtl:text-right">Nombre :</label>
+            <input [value]="userData.user?.nombre"
+            [(ngModel)]="userData.nombre" type="text" id="nombre" class="rounded-md border-2 border-black" name="nombre">
+        </div>
+        <div class="pb-3">
+            <label class="pr-3  text-lg font-semibold text-left rtl:text-right">Apellido :</label>
+            <input [value]="userData.apellido"
+            [(ngModel)]="userData.apellido" type="text" id="apellido" class="rounded-md border-2 border-black" name="apellido">
+        </div>
+        <div class="pb-8 ">
+            <label class="pr-9 text-lg font-semibold text-left rtl:text-right">Email :</label>
+            <input [value]="userData.email"
+            [(ngModel)]="userData.email" type="email" id="exampleInemail" class="rounded-md border-2 border-black" aria-describedby="emailHelp" name="email">
+        </div>
+
+        <div class="flex mx-[150px]">
+        <button
+        class="font-medium text-white dark:text-white rounded-md bg-blue-600 w-24 h-8" (click)="updateUser()">Crear</button>
+        </div>
+    </form>
+    </div>
+</div>
+</section>
