--- a/src/app/SistemCofee/userlist/userlist.component.html
+++ b/src/app/SistemCofee/userlist/userlist.component.html
@@ -1,7 +1,9 @@
-<section class="flex flex-col items-center pt-52">
+<section class="flex flex-col items-center h-screen">
     <caption class="p-5 text-xl font-bold uppercase text-left rtl:text-right text-gray-90 dark:text-white">
         Lista de clientes
     </caption>
+    <button [routerLink]="['/SistemCofee/singup']"
+    >Add User</button>
     <div class="overflow-x-auto sm:rounded-lg">    
         <table class="w-[400px] text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 border-2 rounded-md border-blue-500">
             
