--- a/src/app/SistemCofee/updateuser/updateuser.component.html
+++ b/src/app/SistemCofee/updateuser/updateuser.component.html
@@ -1,29 +1,37 @@
-<section class="items-center">
-    <div class="flex flex-col items-center pt-52">
-    <div class="flex flex-col items-center">
-    <h1 class="pb-5  text-lg font-semibold text-left rtl:text-right">Actualiar Usuario</h1>
-    <form class="items-center justify-center">
-        <div class="pb-3">
-            <label class="pr-3  text-lg font-semibold text-left rtl:text-right">Nombre :</label>
-            <input [value]="userData.user?.nombre"
-            [(ngModel)]="userData.nombre" type="text" id="nombre" class="rounded-md border-2 border-black" name="nombre">
+<div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12">
+    <div class="relative py-3 sm:max-w-xl sm:mx-auto">
+        <div
+            class="absolute inset-0 bg-gradient-to-r from-cyan-400 to-sky-500 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
         </div>
-        <div class="pb-3">
-            <label class="pr-3  text-lg font-semibold text-left rtl:text-right">Apellido :</label>
-            <input [value]="userData.apellido"
-            [(ngModel)]="userData.apellido" type="text" id="apellido" class="rounded-md border-2 border-black" name="apellido">
+        <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
+            <div class="max-w-md mx-auto">
+            <h1 class="text-2xl font-semibold">Actualiar Usuario</h1>
+            <form class="items-center justify-center">
+                <div class="divide-y divide-gray-200">
+                    <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
+                        <div class="relative form-group">
+                        <label class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Nombre :</label>
+                        <input [value]="userData.user?.nombre"
+                        [(ngModel)]="userData.nombre" type="text" id="nombre" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" name="nombre">
+                        </div>
+                        <div class="relative form-group">
+                        <label class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Apellido :</label>
+                        <input [value]="userData.apellido"
+                        [(ngModel)]="userData.apellido" type="text" id="apellido" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" name="apellido">
+                        </div>
+                        <div class="relative form-group">
+                        <label class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Email :</label>
+                        <input [value]="userData.email"
+                        [(ngModel)]="userData.email" type="email" id="exampleInemail" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" aria-describedby="emailHelp" name="email">
+                        </div>
+                
+                        <div class="flex mx-[150px]">
+                        <button
+                            class="font-medium text-white dark:text-white rounded-md bg-blue-600 w-24 h-8" (click)="updateUser()">Crear</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="pb-8 ">
-            <label class="pr-9 text-lg font-semibold text-left rtl:text-right">Email :</label>
-            <input [value]="userData.email"
-            [(ngModel)]="userData.email" type="email" id="exampleInemail" class="rounded-md border-2 border-black" aria-describedby="emailHelp" name="email">
-        </div>
-
-        <div class="flex mx-[150px]">
-        <button
-        class="font-medium text-white dark:text-white rounded-md bg-blue-600 w-24 h-8" (click)="updateUser()">Crear</button>
-        </div>
-    </form>
     </div>
 </div>
-</section>
